--- a/source/styles/limestrap.scss
+++ b/source/styles/limestrap.scss
@@ -1,4 +1,3 @@
-@import "variables";
-@import "bootstrap";
-@import "bootstrap/theme";
-@import "bootswatch";
+@import "litera/variables";
+@import "node_modules/bootstrap/scss/bootstrap.scss";
+@import "litera/bootswatch";
