--- a/source/styles/limestrap.scss
+++ b/source/styles/limestrap.scss
@@ -1,3 +1,7 @@
 @import "litera/variables";
-@import "node_modules/bootstrap/scss/bootstrap.scss";
+@import "bootstrap";
+@import "font-awesome.scss";
+@import "awesome-bootstrap-checkbox-fixes";
+@import "awesome-bootstrap-checkbox.scss";
+@import "bootstrap-slider";
 @import "litera/bootswatch";
