--- a/public/styles/limestrap.css
+++ b/public/styles/limestrap.css
@@ -9070,47 +9070,39 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
   clip: auto; }
 
 .abc-checkbox {
-  cursor: default;
-  padding-left: 4px; }
+  padding-left: 20px; }
   .abc-checkbox label {
-    cursor: pointer;
-    display: inline;
-    vertical-align: top;
+    display: inline-block;
+    vertical-align: middle;
     position: relative;
     padding-left: 5px; }
     .abc-checkbox label::before {
-      cursor: pointer;
       content: "";
       display: inline-block;
       position: absolute;
       width: 17px;
       height: 17px;
-      top: 2px;
       left: 0;
-      margin-left: -1.25rem;
+      margin-left: -20px;
       border: 1px solid rgba(0, 0, 0, 0.1);
       border-radius: 3px;
       background-color: #fff;
       -webkit-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
       transition: border 0.15s ease-in-out, color 0.15s ease-in-out; }
     .abc-checkbox label::after {
-      cursor: pointer;
       display: inline-block;
       position: absolute;
       width: 16px;
       height: 16px;
       left: 0;
-      top: 2px;
-      margin-left: -1.25rem;
+      top: 0;
+      margin-left: -20px;
       padding-left: 3px;
       padding-top: 1px;
       font-size: 11px;
       color: #464a4c; }
   .abc-checkbox input[type="checkbox"],
   .abc-checkbox input[type="radio"] {
-    position: static;
-    margin-left: 0;
-    cursor: pointer;
     opacity: 0;
     z-index: 1; }
     .abc-checkbox input[type="checkbox"]:focus + label::before,
@@ -9137,10 +9129,7 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
       opacity: 0.65; }
       .abc-checkbox input[type="checkbox"]:disabled + label::before,
       .abc-checkbox input[type="radio"]:disabled + label::before {
-        background-color: #ccc;
-        cursor: not-allowed; }
-      .abc-checkbox input[type="checkbox"]:disabled + label::after,
-      .abc-checkbox input[type="radio"]:disabled + label::after {
+        background-color: #eceeef;
         cursor: not-allowed; }
   .abc-checkbox.abc-checkbox-circle label::before {
     border-radius: 50%; }
@@ -9149,8 +9138,8 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 .abc-checkbox-primary input[type="checkbox"]:checked + label::before,
 .abc-checkbox-primary input[type="radio"]:checked + label::before {
-  background-color: theme-color(primary);
-  border-color: theme-color(primary); }
+  background-color: #4582EC;
+  border-color: #4582EC; }
 
 .abc-checkbox-primary input[type="checkbox"]:checked + label::after,
 .abc-checkbox-primary input[type="radio"]:checked + label::after {
@@ -9158,8 +9147,8 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 .abc-checkbox-danger input[type="checkbox"]:checked + label::before,
 .abc-checkbox-danger input[type="radio"]:checked + label::before {
-  background-color: theme-color(danger);
-  border-color: theme-color(danger); }
+  background-color: #d9534f;
+  border-color: #d9534f; }
 
 .abc-checkbox-danger input[type="checkbox"]:checked + label::after,
 .abc-checkbox-danger input[type="radio"]:checked + label::after {
@@ -9167,8 +9156,8 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 .abc-checkbox-info input[type="checkbox"]:checked + label::before,
 .abc-checkbox-info input[type="radio"]:checked + label::before {
-  background-color: theme-color(info);
-  border-color: theme-color(info); }
+  background-color: #20c997;
+  border-color: #20c997; }
 
 .abc-checkbox-info input[type="checkbox"]:checked + label::after,
 .abc-checkbox-info input[type="radio"]:checked + label::after {
@@ -9176,8 +9165,8 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 .abc-checkbox-warning input[type="checkbox"]:checked + label::before,
 .abc-checkbox-warning input[type="radio"]:checked + label::before {
-  background-color: theme-color(warning);
-  border-color: theme-color(warning); }
+  background-color: #fd7e14;
+  border-color: #fd7e14; }
 
 .abc-checkbox-warning input[type="checkbox"]:checked + label::after,
 .abc-checkbox-warning input[type="radio"]:checked + label::after {
@@ -9185,8 +9174,8 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 .abc-checkbox-success input[type="checkbox"]:checked + label::before,
 .abc-checkbox-success input[type="radio"]:checked + label::before {
-  background-color: theme-color(success);
-  border-color: theme-color(success); }
+  background-color: #02B875;
+  border-color: #02B875; }
 
 .abc-checkbox-success input[type="checkbox"]:checked + label::after,
 .abc-checkbox-success input[type="radio"]:checked + label::after {
@@ -9194,8 +9183,8 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 .abc-checkbox-primary input[type="checkbox"]:indeterminate + label::before,
 .abc-checkbox-primary input[type="radio"]:indeterminate + label::before {
-  background-color: theme-color(primary);
-  border-color: theme-color(primary); }
+  background-color: #4582EC;
+  border-color: #4582EC; }
 
 .abc-checkbox-primary input[type="checkbox"]:indeterminate + label::after,
 .abc-checkbox-primary input[type="radio"]:indeterminate + label::after {
@@ -9203,8 +9192,8 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 .abc-checkbox-danger input[type="checkbox"]:indeterminate + label::before,
 .abc-checkbox-danger input[type="radio"]:indeterminate + label::before {
-  background-color: theme-color(danger);
-  border-color: theme-color(danger); }
+  background-color: #d9534f;
+  border-color: #d9534f; }
 
 .abc-checkbox-danger input[type="checkbox"]:indeterminate + label::after,
 .abc-checkbox-danger input[type="radio"]:indeterminate + label::after {
@@ -9212,8 +9201,8 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 .abc-checkbox-info input[type="checkbox"]:indeterminate + label::before,
 .abc-checkbox-info input[type="radio"]:indeterminate + label::before {
-  background-color: theme-color(info);
-  border-color: theme-color(info); }
+  background-color: #20c997;
+  border-color: #20c997; }
 
 .abc-checkbox-info input[type="checkbox"]:indeterminate + label::after,
 .abc-checkbox-info input[type="radio"]:indeterminate + label::after {
@@ -9221,8 +9210,8 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 .abc-checkbox-warning input[type="checkbox"]:indeterminate + label::before,
 .abc-checkbox-warning input[type="radio"]:indeterminate + label::before {
-  background-color: theme-color(warning);
-  border-color: theme-color(warning); }
+  background-color: #fd7e14;
+  border-color: #fd7e14; }
 
 .abc-checkbox-warning input[type="checkbox"]:indeterminate + label::after,
 .abc-checkbox-warning input[type="radio"]:indeterminate + label::after {
@@ -9230,30 +9219,26 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 .abc-checkbox-success input[type="checkbox"]:indeterminate + label::before,
 .abc-checkbox-success input[type="radio"]:indeterminate + label::before {
-  background-color: theme-color(success);
-  border-color: theme-color(success); }
+  background-color: #02B875;
+  border-color: #02B875; }
 
 .abc-checkbox-success input[type="checkbox"]:indeterminate + label::after,
 .abc-checkbox-success input[type="radio"]:indeterminate + label::after {
   background-color: #fff; }
 
 .abc-radio {
-  cursor: default;
-  padding-left: 4px; }
+  padding-left: 20px; }
   .abc-radio label {
-    cursor: pointer;
-    display: inline;
-    vertical-align: top;
+    display: inline-block;
+    vertical-align: middle;
     position: relative;
     padding-left: 5px; }
     .abc-radio label::before {
-      cursor: pointer;
       content: "";
       display: inline-block;
       position: absolute;
       width: 17px;
       height: 17px;
-      top: 2px;
       left: 0;
       margin-left: -20px;
       border: 1px solid rgba(0, 0, 0, 0.1);
@@ -9262,14 +9247,13 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
       -webkit-transition: border 0.15s ease-in-out;
       transition: border 0.15s ease-in-out; }
     .abc-radio label::after {
-      cursor: pointer;
       display: inline-block;
       position: absolute;
       content: " ";
       width: 11px;
       height: 11px;
       left: 3px;
-      top: 5px;
+      top: 3px;
       margin-left: -20px;
       border-radius: 50%;
       background-color: #464a4c;
@@ -9280,9 +9264,6 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
       transition: transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33);
       transition: transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33), -webkit-transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33); }
   .abc-radio input[type="radio"] {
-    position: static;
-    margin-left: 0;
-    cursor: pointer;
     opacity: 0;
     z-index: 1; }
     .abc-radio input[type="radio"]:focus + label::before {
@@ -9296,63 +9277,66 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
       opacity: 0.65; }
       .abc-radio input[type="radio"]:disabled + label::before {
         cursor: not-allowed; }
-      .abc-radio input[type="radio"]:disabled + label::after {
-        cursor: not-allowed; }
   .abc-radio.radio-inline {
     margin-top: 0; }
 
 .abc-radio-primary input[type="radio"] + label::after {
-  background-color: theme-color(primary); }
+  background-color: #4582EC; }
 
 .abc-radio-primary input[type="radio"]:checked + label::before {
-  border-color: theme-color(primary); }
+  border-color: #4582EC; }
 
 .abc-radio-primary input[type="radio"]:checked + label::after {
-  background-color: theme-color(primary); }
+  background-color: #4582EC; }
 
 .abc-radio-danger input[type="radio"] + label::after {
-  background-color: theme-color(danger); }
+  background-color: #d9534f; }
 
 .abc-radio-danger input[type="radio"]:checked + label::before {
-  border-color: theme-color(danger); }
-
-.abc-radio-danger input[type="radio"]:checked + label::after {
-  background-color: theme-color(danger); }
-
-.abc-radio-info input[type="radio"] + label::after {
-  background-color: theme-color(info); }
-
-.abc-radio-info input[type="radio"]:checked + label::before {
-  border-color: theme-color(info); }
-
-.abc-radio-info input[type="radio"]:checked + label::after {
-  background-color: theme-color(info); }
-
-.abc-radio-warning input[type="radio"] + label::after {
-  background-color: theme-color(warning); }
-
-.abc-radio-warning input[type="radio"]:checked + label::before {
-  border-color: theme-color(warning); }
-
-.abc-radio-warning input[type="radio"]:checked + label::after {
-  background-color: theme-color(warning); }
-
-.abc-radio-success input[type="radio"] + label::after {
-  background-color: theme-color(success); }
-
-.abc-radio-success input[type="radio"]:checked + label::before {
-  border-color: theme-color(success); }
-
-.abc-radio-success input[type="radio"]:checked + label::after {
-  background-color: theme-color(success); }
-
-label .was-validated .form-check-input:invalid .abc-checkbox:before, label
-.was-validated .form-check-input:invalid .abc-radio:before, label .form-check-input.is-invalid .abc-checkbox:before, label
-.form-check-input.is-invalid .abc-radio:before {
   border-color: #d9534f; }
 
-* {
-  background: #eee !important; }
+.abc-radio-danger input[type="radio"]:checked + label::after {
+  background-color: #d9534f; }
+
+.abc-radio-info input[type="radio"] + label::after {
+  background-color: #20c997; }
+
+.abc-radio-info input[type="radio"]:checked + label::before {
+  border-color: #20c997; }
+
+.abc-radio-info input[type="radio"]:checked + label::after {
+  background-color: #20c997; }
+
+.abc-radio-warning input[type="radio"] + label::after {
+  background-color: #fd7e14; }
+
+.abc-radio-warning input[type="radio"]:checked + label::before {
+  border-color: #fd7e14; }
+
+.abc-radio-warning input[type="radio"]:checked + label::after {
+  background-color: #fd7e14; }
+
+.abc-radio-success input[type="radio"] + label::after {
+  background-color: #02B875; }
+
+.abc-radio-success input[type="radio"]:checked + label::before {
+  border-color: #02B875; }
+
+.abc-radio-success input[type="radio"]:checked + label::after {
+  background-color: #02B875; }
+
+input[type="checkbox"].styled:checked + label:after,
+input[type="radio"].styled:checked + label:after {
+  font-family: "FontAwesome";
+  content: ""; }
+
+input[type="checkbox"] .styled:checked + label::before,
+input[type="radio"] .styled:checked + label::before {
+  color: #fff; }
+
+input[type="checkbox"] .styled:checked + label::after,
+input[type="radio"] .styled:checked + label::after {
+  color: #fff; }
 
 /*! =========================================================
  * bootstrap-slider.js
