--- a/source/styles/limestrap.scss
+++ b/source/styles/limestrap.scss
@@ -2,9 +2,7 @@
 @import "bootstrap";
 @import "font-awesome.scss";
 @import "awesome-bootstrap-checkbox-fixes";
-
-
 @import "awesome-bootstrap-checkbox.scss";
-
 @import "bootstrap-slider";
 @import "litera/bootswatch";
+@import "custom"
