eliminant innecessaris de template

--- a/source/styles/limestrap.scss
+++ b/source/styles/limestrap.scss
@@ -1,8 +1,8 @@
 @import "litera/variables";
+@import "variables";
 @import "bootstrap";
-@import "font-awesome.scss";
 @import "awesome-bootstrap-checkbox-fixes";
 @import "awesome-bootstrap-checkbox.scss";
-@import "bootstrap-slider";
 @import "litera/bootswatch";
-@import "custom"
+@import "template";
+@import "custom";
