--- a/source/styles/limestrap.scss
+++ b/source/styles/limestrap.scss
@@ -3,6 +3,7 @@
 @import "bootstrap";
 @import "awesome-bootstrap-checkbox-fixes";
 @import "awesome-bootstrap-checkbox.scss";
+@import "awesome-bootstrap-checkbox-modified";
 @import "litera/bootswatch";
 @import "template";
 @import "custom";
