--- a/source/styles/awesome-bootstrap-checkbox-fixes.scss
+++ b/source/styles/awesome-bootstrap-checkbox-fixes.scss
@@ -1,4 +1,3 @@
-
 @mixin tab-focus() {
   // Default
   outline: thin dotted;
@@ -6,3 +5,6 @@
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
+
+$input-disabled-bg: $gray-500;
+$form-feedback-invalid-color: $danger;
