add requests of "Enquesta esports a les criatures" email

--- a/source/styles/custom.scss
+++ b/source/styles/custom.scss
@@ -3,6 +3,10 @@ body {
     padding-top: 58px;
 }
 
+html body {
+  font-family: "Arial", "Helvetica" sans-serif;
+}
+
 $brand-primary: #f6ca00;
 $brand-secondary: #dc3545;
 
