--- a/source/styles/limestrap.scss
+++ b/source/styles/limestrap.scss
@@ -7,3 +7,5 @@
 @import "litera/bootswatch";
 @import "template";
 @import "custom";
+@import "table-highlighting";
+@import "bigger-checks-and-radios";
