--- a/source/styles/litera/bootstrap.css
+++ b/source/styles/litera/bootstrap.css
@@ -11,7 +11,7 @@
  * Copyright 2011-2017 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-@import url("https://fonts.googleapis.com/css?family=Raleway:400,700");
+
 :root {
   --blue: #4582EC;
   --indigo: #6610f2;
@@ -39,7 +39,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-family-sans-serif: "Arial", "Helvetica";
   --font-family-monospace: "SFMono-Regular", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -128,7 +128,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Arial", "Helvetica" sans-serif;
   font-size: 1.063rem;
   font-weight: 400;
   line-height: 1.5;
@@ -5479,7 +5479,7 @@ button.close {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Arial", "Helvetica" sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5592,7 +5592,7 @@ button.close {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Arial", "Helvetica" sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -8819,7 +8819,7 @@ a.text-dark:focus, a.text-dark:hover {
 
 .btn {
   border-radius: 17.25px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Arial", "Helvetica" sans-serif;
   font-size: 14px;
 }
 
@@ -8850,7 +8850,7 @@ footer {
 
 .lead {
   color: #868e96;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Arial", "Helvetica" sans-serif;
 }
 
 table,
@@ -8915,7 +8915,7 @@ table-success, table-info, table-warning, table-danger,
 }
 
 .alert, .alert p {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Arial", "Helvetica" sans-serif;
 }
 
 .alert a, .alert .alert-link {
