add custom javascript

--- a/source/styles/custom.scss
+++ b/source/styles/custom.scss
@@ -95,3 +95,11 @@ body .bg-light {
 #topContainer {
   background: transparent;
 }
+
+.question-title-container {
+    margin-bottom: 1em;
+}
+
+.questionhelp {
+    margin-bottom: 1em;
+}
