--- a/source/styles/template.scss
+++ b/source/styles/template.scss
@@ -1121,3 +1121,12 @@ form > .row {
 .question-title-container {
     color: inherit;
 }
+
+#navigator-container {
+    margin-top: 0;
+    padding-top: 0;
+}
+
+body div.row .question-container {
+    margin-bottom: 0;
+}
