--- a/source/styles/custom.scss
+++ b/source/styles/custom.scss
@@ -1,14 +1,21 @@
+@import url('https://fonts.googleapis.com/css?family=Calibri:400,700,400italic,700italic');
+
+
 body {
     min-height: 75rem;
     padding-top: 58px;
 }
 
 html body {
-  font-family: "Arial", "Helvetica" sans-serif;
+  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 
-$brand-primary: #f6ca00;
-$brand-secondary: #dc3545;
+$primary:       #e98300;
+$brand-primary: $primary;
+$secondary:     #331c54;
+$success: $primary;
+$brand-secondary: $secondary;
+
 
 .checkbox input[type=checkbox]:checked+label::before, .checkbox input[type=radio]:checked+label::before {
     background-color: $brand-primary;
@@ -33,8 +40,30 @@ $brand-secondary: #dc3545;
 
 
 body .bg-light {
-    background-color: $brand-primary !important;
+    border-bottom: 3px solid $brand-primary;
+    background: white !important;
+    padding: 0;
+    margin: 0;
+
     .navbar-brand {
+        &:before {
+          content: " ";
+          width: 187px;
+          height: 65px;
+          transition-property: all;
+          transition-duration: 0.5s;
+
+          background-image: url("../images/logo.png");
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-position: center;
+          float: left;
+          margin-right: 1em;
+        }
+        line-height: 65px;
+        transition-property: all;
+        transition-duration: 0.5s;
+        float: left;
         color: black;
         font-weight: bold;
     }
@@ -42,6 +71,18 @@ body .bg-light {
       color: black;
       text-decoration: underline;
     }
+    .row {
+      padding-top: 65px !important;
+    }
+}
+
+body.scrolled .bg-light {
+  .navbar-brand {
+      &:before {
+        height: 32px;
+      }
+      line-height: 32px;
+  }
 }
 
 
@@ -52,11 +93,11 @@ body .bg-light {
   font-size: 14px !important;
 
   &-lg {
-    border-radius: 43px !important;
+    border-radius: 5px !important;
   }
 
   &-sm {
-    border-radius: 13.5px !important;
+    border-radius: 5px !important;
     font-size: 11px !important;
   }
 
@@ -102,4 +143,41 @@ body .bg-light {
 
 .questionhelp {
     margin-bottom: 1em;
+}
+
+
+.navbar {
+  text-transform: uppercase;
+  a {
+    text-decoration: none !important;
+    color: #808080 !important;
+    &:hover {
+      color: #333333 !important;
+    }
+  }
+}
+
+
+.navbar-nav li {
+  margin: 0 1em;
+}
+
+
+body .btn-primary {
+  @include button-variant($btn-primary-color, $brand-primary, $brand-primary);
+}
+body .btn-secondary {
+  @include button-variant($btn-secondary-color, $brand-secondary, $brand-secondary);
+}
+body .btn-info {
+  @include button-variant($btn-info-color, $btn-info-bg, $btn-info-border);
+}
+body .btn-success {
+  @include button-variant($btn-success-color, $btn-success-bg, $btn-success-border);
+}
+body .btn-warning {
+  @include button-variant($btn-warning-color, $btn-warning-bg, $btn-warning-border);
+}
+body .btn-danger {
+  @include button-variant($btn-danger-color, $btn-danger-bg, $btn-danger-border);
 }
