--- a/source/styles/custom.scss
+++ b/source/styles/custom.scss
@@ -3,7 +3,7 @@
 
 body {
     min-height: 75rem;
-    padding-top: 58px;
+    padding-top: 100px;
 }
 
 html body {
@@ -46,6 +46,7 @@ body .bg-light {
     margin: 0;
 
     .navbar-brand {
+        color: #333!important;
         &:before {
           content: " ";
           width: 187px;
@@ -163,8 +164,14 @@ body.scrolled .bg-light {
 }
 
 
-body .btn-primary {
+body .btn-primary, body .btn {
   @include button-variant($btn-primary-color, $brand-primary, $brand-primary);
+
+    &:not([disabled]):not(.disabled):active,
+    &:not([disabled]):not(.disabled).active,
+    .show > &.dropdown-toggle {
+        @include button-variant($btn-primary-color, $brand-primary, $brand-primary);
+    }
 }
 body .btn-secondary {
   @include button-variant($btn-secondary-color, $brand-secondary, $brand-secondary);
@@ -180,4 +187,197 @@ body .btn-warning {
 }
 body .btn-danger {
   @include button-variant($btn-danger-color, $btn-danger-bg, $btn-danger-border);
+}
+
+
+.qnumcode.question-text {
+    font-weight: bold;
+}
+.qnumcode.question-text:before {
+    content: " ";
+    border-top: 1px solid $brand-primary;
+    clear: both;
+    width: 100%;
+    float: left;
+    margin: 5em 0 1em;
+}
+
+#surveydescription, .group-name {
+    color: $brand-primary;
+}
+
+body .text-info {
+    color: $brand-secondary !important;
+}
+
+
+.dragDropTable {
+  .SortableTitle {
+    text-align: center;
+  }
+  .columns2 {
+    // border: 1px solid #333333;
+  }
+
+  ul.dragDropChoiceList li,
+  ol.dragDropRankList li {
+    background-color: #dadada;
+    border-radius: 5px;
+  }
+}
+
+
+
+.slider.slider-horizontal {
+    width: 100% !important;
+
+    /* The reset button will be under the slider, so allow some margin */
+    margin-bottom: 1em !important;
+}
+
+/* When slider has both show-min-max and reset button, add space between
+ * left badge and reset button */
+.slider-min-badge {
+    margin-right: 1em !important;
+}
+
+.slider-left-span {
+    text-align: right !important;
+}
+
+.slider-right-span {
+    text-align: left !important;
+}
+
+.slider-container_holder {
+    width: 100%;
+}
+.slider-container {
+    margin-top: 3.5em !important;
+    margin-bottom: 2.5em !important;
+}
+
+
+.help-block {
+  display: block;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  color: #737373;
+}
+
+
+
+.tooltip {
+  position: absolute;
+  z-index: 1070;
+  display: block;
+  font-family: "Ubuntu", Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: normal;
+  line-break: auto;
+  line-height: 1.42857143;
+  text-align: left;
+  text-align: start;
+  text-decoration: none;
+  text-shadow: none;
+  text-transform: none;
+  white-space: normal;
+  word-break: normal;
+  word-spacing: normal;
+  word-wrap: normal;
+  font-size: 12px;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+.tooltip.in {
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+}
+.tooltip.top {
+  margin-top: -3px;
+  padding: 5px 0;
+}
+.tooltip.right {
+  margin-left: 3px;
+  padding: 0 5px;
+}
+.tooltip.bottom {
+  margin-top: 3px;
+  padding: 5px 0;
+}
+.tooltip.left {
+  margin-left: -3px;
+  padding: 0 5px;
+}
+.tooltip-inner {
+  max-width: 200px;
+  padding: 3px 8px;
+  color: #ffffff;
+  text-align: center;
+  background-color: #000000;
+  border-radius: 4px;
+}
+.tooltip-arrow {
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+}
+.tooltip.top .tooltip-arrow {
+  bottom: 0;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px 5px 0;
+  border-top-color: #000000;
+}
+.tooltip.top-left .tooltip-arrow {
+  bottom: 0;
+  right: 5px;
+  margin-bottom: -5px;
+  border-width: 5px 5px 0;
+  border-top-color: #000000;
+}
+.tooltip.top-right .tooltip-arrow {
+  bottom: 0;
+  left: 5px;
+  margin-bottom: -5px;
+  border-width: 5px 5px 0;
+  border-top-color: #000000;
+}
+.tooltip.right .tooltip-arrow {
+  top: 50%;
+  left: 0;
+  margin-top: -5px;
+  border-width: 5px 5px 5px 0;
+  border-right-color: #000000;
+}
+.tooltip.left .tooltip-arrow {
+  top: 50%;
+  right: 0;
+  margin-top: -5px;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #000000;
+}
+.tooltip.bottom .tooltip-arrow {
+  top: 0;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 0 5px 5px;
+  border-bottom-color: #000000;
+}
+.tooltip.bottom-left .tooltip-arrow {
+  top: 0;
+  right: 5px;
+  margin-top: -5px;
+  border-width: 0 5px 5px;
+  border-bottom-color: #000000;
+}
+.tooltip.bottom-right .tooltip-arrow {
+  top: 0;
+  left: 5px;
+  margin-top: -5px;
+  border-width: 0 5px 5px;
+  border-bottom-color: #000000;
 }
