--- a/source/styles/custom.scss
+++ b/source/styles/custom.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Calibri:400,700,400italic,700italic');
-
 
 body {
     min-height: 75rem;
@@ -7,12 +5,12 @@ body {
 }
 
 html body {
-  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-$primary:       #e98300;
+$primary:       #cf1d17;
 $brand-primary: $primary;
-$secondary:     #331c54;
+$secondary:     #2c3e50;
 $success: $primary;
 $brand-secondary: $secondary;
 
@@ -50,7 +48,7 @@ body .bg-light {
         &:before {
           content: " ";
           width: 187px;
-          height: 65px;
+          height: 59px;
           transition-property: all;
           transition-duration: 0.5s;
 
@@ -65,12 +63,12 @@ body .bg-light {
         transition-duration: 0.5s;
         float: left;
 
-        background-image: url("../images/LOGO_ME2022_petit.jpg");
+
         background-size: contain;
         background-repeat: no-repeat;
         background-position: right;
         text-indent: -90000px;
-        margin: 10px;
+        margin: 12px;
 
         width: 510px;
         height: 65px;
@@ -85,21 +83,28 @@ body.scrolled .bg-light {
   .navbar-brand {
       &:before {
         width: 93px;
-        height: 32px;
+        height: 45px;
       }
       width: 260px;
-      height: 32px;
+      height: 52px;
   }
 }
 
 @media (max-width: 782px){
   .navbar-brand {
+    width: auto !important;
+    float: left !important;
+    width: auto !important;
+
       &:before {
         width: 93px !important;
-        height: 32px !important;
+        height: 45px !important;
       }
-      width: 260px !important;
-      height: 32px !important;
+      height: 52px !important;
+  }
+  .navbar-toggler {
+    float: right !important;
+    margin-top: 16px !important;
   }
 }
 
@@ -220,7 +225,7 @@ body .btn-danger {
     clear: both;
     width: 100%;
     float: left;
-    margin: 5em 0 1em;
+    margin: 0em 0 1em;
 }
 
 #surveydescription, .group-name {
